--- a/vignettes/instrument-designs.Rmd
+++ b/vignettes/instrument-designs.Rmd
@@ -2,6 +2,17 @@
 title: "Instruments"
 ---
 
+Instruments are mechanisms constructed to investigations and experiments. These are useful for designing recurring complex processes whose primary value is some end product rather than insight at each procedural step. They can be thought of as automated methods, where individual steps in the procedure do not necessary merit individual inspection and documentation.
+
+The design typically consists of one or more R files containing either libraries or scripts, or any other executables from workflow frameworks (`dvc`, `mlflow`, `workflowr`, etc). It should also include an RMarkdown file that documents the instrument's usage and design, including diagrams and technical details.
+
+Examples:
+
+- Algorithms
+- Workflows (Model training, Transformation)
+- Simulators
+- Telemetry (Plots, Dashboards, etc)
+
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
